Started implementing characters and movement.
